fix(client): users alignments

--- a/client/styles.scss
+++ b/client/styles.scss
@@ -573,7 +573,7 @@
 }
 
 .User__name {
-  width: 25%;
+  width: 40%;
 }
 
 .User__password {
@@ -581,7 +581,7 @@
 }
 
 .User__role {
-  width: 15%;
+  width: 20%;
 }
 
 .User__status {
